data/derived/fa15/progs/unify/prog2772.ml.out
Characters 316-317:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         (int * 'a) list -> (int * int) list -> int * int
       but an expression was expected of type
         (int * 'a) list -> (int * int) list -> (int * 'a) list
       Type int * int is not compatible with type (int * 'a) list 
